app/app.css
@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Dosis:wght@200..800&family=Jost:ital,wght@0,100..900;1,100..900&family=Phudu:wght@300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

@import "tailwindcss";

@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@keyframes fade-in-scale {
    0% {
        opacity: 0;
        transform: scale(0.95);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}
@keyframes float {
    0%,
    100% {
        transform: translateY(-2px);
    }
    50% {
        transform: translateY(2px);
    }
}
@keyframes float-circle {
    0%,
    100% {
        transform: translate(0px, -4px);
    }
    50% {
        transform: translate(0px, 2px);
    }
}
@keyframes float-slow {
    0%,
    100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-8px);
    }
}
@keyframes pan-slow {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }
}

@theme {
    --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
    --font-serif: Dosis, serif;
    --font-display: Bangers, sans-serif;
    --font-tags: Phudu, monospace;
    --font-alter: Jost, sans-serif;
    --font-altero: Ubuntu, sans-serif;

    --animate-fade-in-scale: "fade-in-scale 0.3s ease-out";
    --animate-float: "float 3s ease infinite";
    --animate-float-circle: "float-circle 3s ease infinite";
    --animate-float-slow: "float-slow 6s ease-in-out infinite";
    --animate-pan-slow: "pan-slow 30s linear infinite";
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
    font-size: 1rem;
}

body {
    --s: 129px; /* control the size*/
    --c1: #1b1b2c;
    --c2: #001219;

    --_g: #0000 52%, var(--c1) 54% 57%, #0000 59%;
    background:
        radial-gradient(farthest-side at -33.33% 50%, var(--_g)) 0
            calc(var(--s) / 2),
        radial-gradient(farthest-side at 50% 133.33%, var(--_g))
            calc(var(--s) / 2) 0,
        radial-gradient(farthest-side at 133.33% 50%, var(--_g)),
        radial-gradient(farthest-side at 50% -33.33%, var(--_g)),
        var(--c2);
    background-size:
        calc(var(--s) / 4.667) var(--s),
        var(--s) calc(var(--s) / 4.667);
}

a.active {
    @apply underline underline-offset-2;
}

a.pending {
    @apply animate-pulse;
}
img {
    max-width: 100%;
    min-height: 300px;
    height: 100%;
    max-height: 70vh;
}

@layer components {
    .maintitle {
        @apply text-4xl md:text-6xl lg:text-8xl mb-2 font-display leading-[1em] text-teal-400 text-shadow-lg text-shadow-black/50 select-none;
    }
    .subtitle {
        @apply text-xl md:text-2xl font-normal font-serif text-emerald-100 text-shadow-md text-shadow-black/40 select-none;
    }
    .description {
        @apply md:text-xl font-sans font-normal indent-3 text-neutral-200 text-shadow-md text-shadow-black/30 select-none;
    }
    .tags {
        @apply text-sm md:text-base font-tags font-semibold uppercase tracking-widest text-teal-100 text-shadow-md text-shadow-black/30;
    }
    .paragraph {
        @apply text-base md:text-lg font-sans font-thin mx-auto leading-relaxed text-neutral-100 text-shadow-md text-shadow-black/20 select-none;
    }
    .navlink {
        @apply px-3 py-2 text-lg md:text-2xl lg:text-3xl font-display font-semibold tracking-wide text-indigo-500 hover:text-indigo-400 active:text-blue-400 text-shadow-lg text-shadow-black/40 transition-all duration-200 ease-in-out select-none;
    }
}
.neumorphic-tw {
    @apply bg-indigo-900/50 border border-indigo-950 shadow-md rounded-md shadow-indigo-900/50 drop-shadow-lg drop-shadow-gray-950/50 backdrop-blur-lg;
}
.neumorphic-tw-h {
    @apply bg-indigo-900 border border-indigo-950 shadow-md rounded-md shadow-indigo-900/20 drop-shadow-lg drop-shadow-gray-950/20 backdrop-blur-lg;
}
.neumorphic {
    @apply bg-indigo-950 shadow-lg rounded-md backdrop-blur-3xl p-6;
    box-shadow:
        6px 6px 18px #0d0b12d7,
        -8px -8px 24px #140d34ad;
}

.neumorphic-gradient {
    @apply bg-indigo-950/50 rounded-md shadow-lg backdrop-blur-3xl p-6 transition-all duration-300 ease-in-out;
    background: linear-gradient(145deg, #3f0c7dbb, #1a0252e1);
    box-shadow:
        8px 8px 10px #0f022d,
        -8px -8px 10px #201043db;
    transition: all 400ms ease-in-out;
}
.neumorphic-gradient:hover {
    @apply transition-all duration-300 ease-in-out;
    background: linear-gradient(145deg, #1a0252e1, #3f0c7dbb);
    box-shadow:
        8px 8px 10px #0f022d,
        -8px -8px 10px #201043db;
    transition: all 400ms ease-in-out;
}
.neumorphic-gradient-gray {
    @apply bg-gray-950/50 rounded-md shadow-lg backdrop-blur-3xl p-6;
    background: linear-gradient(145deg, #0e0e0ee2, #18161ee1);
    box-shadow:
        6px 6px 8px rgba(26, 26, 26, 0.578),
        -4px -4px 8px #22212597;
}
.neumorphic-gradient-gray:hover {
    background: linear-gradient(145deg, #18161ee1, #0e0e0ee2);
    box-shadow:
        6px 6px 8px rgba(26, 26, 26, 0.578),
        -4px -4px 8px #22212597;
}

.test p {
    color: #35a699;
    background-color: #eee8d2;
}

.line-clamp-2 {
    display: -webkit-box;
    -webkit-line-clamp: 3; /* Oprez: Ime klase je 'line-clamp-2', ali je vrijednost 3 */
    line-clamp: 2; /* CSS line-clamp će vjerojatno premostiti -webkit- */
    -webkit-box-orient: vertical;
    overflow: hidden;
}

img.zoom {
    /* the coordinate of the zoom */
    --x: 50%;
    --y: 50%;

    transform: scale(var(--zoom));
    transform-origin: var(--x) var(--y);
    clip-path: inset(
        calc((1 - 1 / var(--zoom)) * (var(--y)))
            calc((1 - 1 / var(--zoom)) * (100% - var(--x)))
            calc((1 - 1 / var(--zoom)) * (100% - var(--y)))
            calc((1 - 1 / var(--zoom)) * (var(--x)))
    );
    cursor: crosshair;
}
img.zoom:hover {
    --zoom: 2; /* control the zoom level */
}

@tailwind utilities;

